Added Time response test and post test setup

--- a/API_TESTING/.classpath
+++ b/API_TESTING/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="/home/appventurez/Documents/seljars/API Docs/activation-1.1.1.jar"/>
 	<classpathentry kind="lib" path="/home/appventurez/Documents/seljars/API Docs/tagsoup-1.2.1.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/appventurez/Downloads/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
